# tt_riing_quad_fan_control

./: .clang-format  .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  imgui.ini  main.cpp
.github/workflows/: ci.yml  release.yml
cmake/: CommonDeps.cmake  uninstall.cmake.in
imgui/: implot.cpp  implot.h
include/: config.hpp  file_utils.hpp  hidapi_wrapper.hpp  monitoring.hpp  nvml.h  vulkan.hpp
include/core/: bezierCurvePlotStrategy.hpp  effectCommand.hpp  effectsEngine.hpp  fanController.hpp  fan_controller.hpp  fan_mediator.hpp  logger.hpp  mediator.hpp  observer.hpp  plotDrawVisitor.hpp  plotStrategy.hpp  pointPlotStrategy.hpp  uiObserver.hpp  visitor.hpp
include/core/commands/: compositeCommand.hpp  fadeCommand.hpp  fadeInCommand.hpp  fadeOutComand.hpp  rainbowColorCommand.hpp  rainbowColorFadeCommand.hpp  staticColorCommand.hpp
include/core/mediators/: fanMediator.hpp
include/core/observers/ui/: uiObserver.hpp
include/core/strategies/: bezierCurvePlotStrategy.hpp  pointPlotStrategy.hpp
include/core/visitors/plot/: plotDrawVisitor.hpp
include/gui/: gtkTrayManager.hpp  gtk_tray_manager.hpp  ui.hpp  window_manager.hpp
include/system/: CPUController.hpp  GPUController.hpp  amd.hpp  config.hpp  controllerData.hpp  deviceController.hpp  dummyGPU.hpp  file_utils.hpp  gpu.hpp  hidapi.hpp  hidapi_wrapper.hpp  monitoring.hpp  nvidia.hpp  stringUtils.hpp  string_utils.hpp  systemBuilder.hpp  vulkan.hpp
include/system/controllers/: ttRiingQuadController.hpp
include/system/gpus/: dummyGPU.hpp  nvidia.hpp
src/: config.cpp  file_utils.cpp  hidapi_wrapper.cpp  monitoring.cpp  vulkan.cpp
src/core/: bezierCurvePlotStrategy.cpp  effectsEngine.cpp  fanController.cpp  fan_controller.cpp  fan_mediator.cpp  logger.cpp  observer.cpp  pointPlotStrategy.cpp  uiObserver.cpp
src/core/commands/: compositeCommand.cpp  fadeCommand.cpp  rainbowColorCommand.cpp  rainbowColorFadeCommand.cpp  staticColorCommand.cpp
src/core/mediators/: fanMediator.cpp
src/core/observers/ui/: uiObserver.cpp
src/core/strategies/: bezierCurvePlotStrategy.cpp  pointPlotStrategy.cpp
src/gui/: gtkTrayManager.cpp  gtk_tray_manager.cpp  ui.cpp  windowManager.cpp  window_manager.cpp
src/system/: CPUController.cpp  GPUController.cpp  amd.cpp  config.cpp  controllerData.cpp  dummyGPU.cpp  fileUtils.cpp  file_utils.cpp  hidapi_wrapper.cpp  hidapi_wrapper.cpp.bak  monitoring.cpp  nvidia.cpp  stringUtils.cpp  systemBuilder.cpp  vulkan.cpp
src/system/controllers/: ttRiingQuadController.cpp
src/system/gpus/: amd.cpp  dummyGPU.cpp  nvidia.cpp
tests/: CMakeLists.txt  test_config.cpp  test_fan_controller.cpp  test_monitoring.cpp
